--- a/index.html
+++ b/index.html
@@ -6,10 +6,353 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap" rel="stylesheet" />
+
     <!-- styles -->
     <link rel="stylesheet" href="assets/css/main.min.css" />
   </head>
   <body>
-    <h1>enamdua</h1>
+    <div class="main-container">
+      <!-- main nav -->
+      <div id="mainNav" class="main-nav">
+        <div class="main-nav-left">
+          <ul class="main-nav-menus">
+            <li class="main-nav-menu main-nav-animated">
+              <a href="#" class="main-nav-link">Our World</a>
+            </li>
+            <li class="main-nav-menu main-nav-animated">
+              <a href="#" class="main-nav-link">Industry</a>
+            </li>
+            <li class="main-nav-menu main-nav-animated">
+              <a href="#" class="main-nav-link">Expertise</a>
+            </li>
+            <li class="main-nav-menu main-nav-animated">
+              <a href="#" class="main-nav-link">Career</a>
+            </li>
+            <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
+              <a href="#" class="main-nav-link">Contacts</a>
+            </li>
+            <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
+              <a href="#" class="main-nav-link">Downloads</a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-nav-right">
+          <img src="assets/images/logo.svg" class="main-nav-logo" />
+          <ul class="main-nav-icons">
+            <li class="main-nav-icon main">
+              <div class="c-pointer" onclick="toggleMainNav()">
+                <img src="assets/images/icon-expand.png" class="main-expand" />
+                <img src="assets/images/icon-collapse.png" class="main-collapse" />
+              </div>
+            </li>
+            <li class="main-nav-icon main-nav-animated">
+              <a href="#">
+                <img src="assets/images/icon-dribbble.png" />
+              </a>
+            </li>
+            <li class="main-nav-icon main-nav-animated">
+              <a href="#">
+                <img src="assets/images/icon-instagram.png" />
+              </a>
+            </li>
+            <li class="main-nav-icon main-nav-animated">
+              <a href="#">
+                <img src="assets/images/icon-twitter.png" />
+              </a>
+            </li>
+            <li class="main-nav-icon main-nav-animated">
+              <a href="#">
+                <img src="assets/images/icon-facebook.png" />
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- hero -->
+      <div class="hero">
+        <div class="content-container">
+          <h1 class="hero-title">the awesome</h1>
+          <img src="assets/images/logo-text.png" class="hero-logo" />
+        </div>
+        <div class="hero-video-container">
+          <!-- <video class="hero-video" autoplay loop muted playsinline>
+            <source src="assets/images/video.mp4" type="video/mp4" />
+          </video> -->
+          <img src="assets/images/hero-gif.gif" class="hero-video" />
+        </div>
+        <div class="content-container">
+          <p class="hero-text">
+            <b>Enam Dua</b>
+            is the catalyst of local digital talents that helps everyone to overcome the global digital challenges. It was founded by a group of local software engineer who set out to show the world that
+            <b>local talents are awesome!</b>
+          </p>
+        </div>
+      </div>
+
+      <!-- about -->
+      <div class="about">
+        <div class="content-container">
+          <div class="row gx-66px">
+            <div class="col-xl-7">
+              <svg viewBox="0 0 100 50">
+                <text x="0" y="20" fill="white" font-size="20" font-weight="bold">The House</text>
+                <text x="0" y="40" fill="white" font-size="20" font-weight="bold">Enam Dua</text>
+              </svg>
+              <img src="assets/images/img-about-1.jpg" class="img-fluid about-img" />
+            </div>
+            <div class="col-xl-5">
+              <svg viewBox="0 0 100 43">
+                <text x="0" y="28.9" fill="white" font-size="28.9" font-weight="bold">of</text>
+              </svg>
+              <p class="about-text">The understatement on Indonesia’s local talents has explicitly reveal one fundamental challenge:</p>
+              <p class="about-text big">as a catalyst for local talents,</p>
+              <p class="about-text">Enam Dua is going to make everyone realize that Indonesia’s local talents are remarkably awesome.</p>
+              <p class="about-text">Enam Dua, by all means, believe in local talents and its potential contributions - especially for Indonesia to dwell confidently in the global digital era. The objective of the house is simple; Enam Dua will help everyone to overcome their digital technological challenges and desire. In a holistic point of view;</p>
+              <p class="about-text big">nothing’s left in the future other than what we do now together.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- detail -->
+      <div class="detail">
+        <div class="content-container">
+          <div class="row gx-66px">
+            <div class="col-xl-5 offset-xl-7">
+              <h2 class="detail-title">Enam dua Expertise</h2>
+            </div>
+          </div>
+          <div class="detail-content">
+            <div class="row gy-5">
+              <div class="col-12">
+                <div class="row gx-66px">
+                  <div class="col-xl-7">
+                    <div class="text-end">
+                      <div>
+                        <h4 class="detail-content-title">System & Software Development</h4>
+                        <p class="detail-content-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xl-5">
+                    <div class="detail-content-box"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="row gx-66px">
+                  <div class="col-xl-7">
+                    <div class="text-end">
+                      <div>
+                        <h4 class="detail-content-title">Digital Transformation</h4>
+                        <p class="detail-content-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xl-5">
+                    <div class="detail-content-box"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="row gx-66px">
+                  <div class="col-xl-7">
+                    <div class="text-end">
+                      <div>
+                        <h4 class="detail-content-title">Programming Language</h4>
+                        <div class="detail-content-grid">
+                          <p class="detail-content-text">CSS 3</p>
+                          <p class="detail-content-text">Cypress</p>
+                          <p class="detail-content-text">MySql</p>
+                          <p class="detail-content-text">React</p>
+                          <p class="detail-content-text">PHP</p>
+                          <p class="detail-content-text">iOS</p>
+                          <p class="detail-content-text">HTML5</p>
+                          <p class="detail-content-text">Redis</p>
+                          <p class="detail-content-text">Postgres</p>
+                          <p class="detail-content-text">Lavarel</p>
+                          <p class="detail-content-text">Android</p>
+                          <p class="detail-content-text">Javascript</p>
+                          <p class="detail-content-text">Jenkins</p>
+                          <p class="detail-content-text">MariaDB</p>
+                          <p class="detail-content-text">Vue</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xl-5">
+                    <div class="detail-content-box"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- description -->
+      <div class="description">
+        <div class="content-container">
+          <div class="row gx-110px">
+            <div class="col-xl-7">
+              <img src="assets/images/img-description-1.png" class="w-100" />
+            </div>
+            <div class="col-xl-5">
+              <div class="description-content">
+                <h2 class="description-title">Creativity in Finance</h2>
+                <p class="description-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- partner -->
+      <div class="partner">
+        <div class="content-container">
+          <div class="nav row gx-72px mb-72px" id="partnerTab" role="tablist">
+            <div class="col c-pointer active" id="partner-tab-1" data-bs-toggle="tab" data-bs-target="#partner-1" type="button" role="tab">
+              <img src="assets/images/img-partner-1-logo.jpg" class="partner-tab-logo" />
+            </div>
+            <div class="col c-pointer" id="partner-tab-2" data-bs-toggle="tab" data-bs-target="#partner-2" type="button" role="tab">
+              <img src="assets/images/img-partner-2-logo.jpg" class="partner-tab-logo" />
+            </div>
+            <div class="col c-pointer" id="partner-tab-3" data-bs-toggle="tab" data-bs-target="#partner-3" type="button" role="tab">
+              <img src="assets/images/img-partner-3-logo.jpg" class="partner-tab-logo" />
+            </div>
+            <div class="col c-pointer" id="partner-tab-4" data-bs-toggle="tab" data-bs-target="#partner-4" type="button" role="tab">
+              <img src="assets/images/img-partner-4-logo.jpg" class="partner-tab-logo" />
+            </div>
+            <div class="col c-pointer" id="partner-tab-5" data-bs-toggle="tab" data-bs-target="#partner-5" type="button" role="tab">
+              <img src="assets/images/img-partner-5-logo.jpg" class="partner-tab-logo" />
+            </div>
+            <div class="col c-pointer" id="partner-tab-5" data-bs-toggle="tab" data-bs-target="#partner-5" type="button" role="tab">
+              <img src="assets/images/img-partner-6-logo.jpg" class="partner-tab-logo" />
+            </div>
+          </div>
+
+          <div class="tab-content text-white" id="myTabContent">
+            <div class="tab-pane fade show active" id="partner-1" role="tabpanel">
+              <div>
+                <img src="assets/images/img-partner-1.jpg" class="w-100 mb-72px" />
+                <div class="row">
+                  <div class="col-xl-6">
+                    <h4 class="partner-title">
+                      Kasbon by
+                      <br />
+                      Djurnee
+                    </h4>
+                    <p class="partner-detail">Indonesia’s Digital Administration Platform</p>
+                    <p class="fw-bold">user interface</p>
+                    <p class="fw-bold">user experience</p>
+                    <p class="fw-bold">web design</p>
+                  </div>
+                  <div class="col-xl-6">
+                    <p class="partner-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects, Enam Dua strives to produce the world class talents as much as possible.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tab-pane fade" id="partner-2" role="tabpanel">partner-2</div>
+            <div class="tab-pane fade" id="partner-3" role="tabpanel">partner-3</div>
+            <div class="tab-pane fade" id="partner-4" role="tabpanel">partner-4</div>
+            <div class="tab-pane fade" id="partner-5" role="tabpanel">partner-5</div>
+            <div class="tab-pane fade" id="partner-5" role="tabpanel">partner-6</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- footer -->
+      <div class="footer">
+        <div class="content-container">
+          <h4 class="footer-title">Enam Dua</h4>
+          <div class="footer-menus">
+            <div class="footer-menu">
+              <p class="footer-menu-title">Industries</p>
+              <div class="footer-menu-items">
+                <a href="#" class="footer-menu-item">Finance</a>
+                <a href="#" class="footer-menu-item">Education</a>
+                <a href="#" class="footer-menu-item">E-commerce</a>
+                <a href="#" class="footer-menu-item">Data Science & Statistic</a>
+                <a href="#" class="footer-menu-item">Agriculture</a>
+                <a href="#" class="footer-menu-item">Retail</a>
+                <a href="#" class="footer-menu-item">Sports</a>
+                <a href="#" class="footer-menu-item">Electronics</a>
+                <a href="#" class="footer-menu-item">Beauty</a>
+              </div>
+            </div>
+
+            <div class="footer-menu">
+              <p class="footer-menu-title">Expertise</p>
+              <div class="footer-menu-items">
+                <a href="#" class="footer-menu-item">System & Software Developement</a>
+                <a href="#" class="footer-menu-item">Digital Transformation</a>
+                <a href="#" class="footer-menu-item">Program Language</a>
+              </div>
+            </div>
+
+            <div class="footer-menu">
+              <p class="footer-menu-title">Our world</p>
+              <div class="footer-menu-items">
+                <a href="#" class="footer-menu-item">Values & culture</a>
+                <a href="#" class="footer-menu-item">the talents</a>
+                <a href="#" class="footer-menu-item">why enam dua</a>
+              </div>
+            </div>
+
+            <div class="footer-menu">
+              <p class="footer-menu-title">Careers</p>
+              <div class="footer-menu-items">
+                <a href="#" class="footer-menu-item">Join us</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer-other-menus">
+            <a href="#" class="footer-other-menu">Contact us</a>
+            <a href="#" class="footer-other-menu">Our offices</a>
+            <a href="#" class="footer-other-menu">Get in touch</a>
+          </div>
+
+          <div class="footer-other-menus">
+            <a href="#" class="footer-other-menu">Legal</a>
+            <a href="#" class="footer-other-menu">Privacy policy</a>
+            <a href="#" class="footer-other-menu">Terms & conditions</a>
+            <a href="#" class="footer-other-menu">Cookies</a>
+          </div>
+
+          <div class="footer-other-menus">
+            <a href="#" class="footer-other-menu">Follow us</a>
+            <a href="#" class="footer-other-menu">Facebook</a>
+            <a href="#" class="footer-other-menu">Instagram</a>
+            <a href="#" class="footer-other-menu">LinkedIn</a>
+            <a href="#" class="footer-other-menu">Twitter</a>
+            <a href="#" class="footer-other-menu">Youtube</a>
+          </div>
+
+          <div class="mt-5">
+            <p class="footer-c">© 2021 Enam Dua.</p>
+            <p class="footer-c">All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- scrips -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      function toggleMainNav() {
+        var mainNav = document.getElementById('mainNav');
+        mainNav.classList.toggle('expanded');
+      }
+    </script>
   </body>
 </html>
