:iphone: Update: Responsive 1440 screen

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- description -->
       <div class="description">
         <div class="content-container">
-          <div class="row gx-110px">
+          <div class="row gx-xxl-66px gx-xxxl-110px">
             <div class="col-xl-7">
               <img src="assets/images/img-description-1.png" class="w-100" />
             </div>
