:iphone: Update: Responsive mobile on main nav

--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
               <a href="#" class="main-nav-link">Downloads</a>
             </li>
           </ul>
+          <div class="d-block d-lg-none mt-auto">
+            <div class="row">
+              <div class="col text-center">
+                <a href="#">
+                  <img src="assets/images/icon-dribbble.png" />
+                </a>
+              </div>
+              <div class="col text-center">
+                <a href="#">
+                  <img src="assets/images/icon-instagram.png" />
+                </a>
+              </div>
+              <div class="col text-center">
+                <a href="#">
+                  <img src="assets/images/icon-twitter.png" />
+                </a>
+              </div>
+              <div class="col text-center">
+                <a href="#">
+                  <img src="assets/images/icon-facebook.png" />
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="main-nav-right">
           <img src="assets/images/logo.svg" class="main-nav-logo" />
