:iphone: Update: Responsive mobile on Homepage

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <!-- about -->
       <div class="about">
         <div class="content-container">
-          <div class="row gx-66px">
+          <div class="row gx-lg-66px">
             <div class="col-xl-7">
               <svg viewBox="0 0 100 50">
                 <text x="0" y="20" fill="white" font-size="20" font-weight="bold">The House</text>
@@ -130,9 +130,11 @@
               <img src="assets/images/img-about-1.jpg" class="img-fluid about-img" />
             </div>
             <div class="col-xl-5">
-              <svg viewBox="0 0 100 43">
-                <text x="0" y="28.9" fill="white" font-size="28.9" font-weight="bold">of</text>
-              </svg>
+              <div class="d-none d-lg-block">
+                <svg viewBox="0 0 100 43">
+                  <text x="0" y="28.9" fill="white" font-size="28.9" font-weight="bold">of</text>
+                </svg>
+              </div>
               <p class="about-text">The understatement on Indonesia’s local talents has explicitly reveal one fundamental challenge:</p>
               <p class="about-text big">as a catalyst for local talents,</p>
               <p class="about-text">Enam Dua is going to make everyone realize that Indonesia’s local talents are remarkably awesome.</p>
@@ -146,7 +148,7 @@
       <!-- detail -->
       <div class="detail">
         <div class="content-container">
-          <div class="row gx-66px">
+          <div class="row gx-lg-66px">
             <div class="col-xl-5 offset-xl-7">
               <h2 class="detail-title">Enam dua Expertise</h2>
             </div>
@@ -154,9 +156,9 @@
           <div class="detail-content">
             <div class="row gy-5">
               <div class="col-12">
-                <div class="row gx-66px">
+                <div class="row gx-lg-66px">
                   <div class="col-xl-7">
-                    <div class="text-end">
+                    <div class="text-lg-end">
                       <div>
                         <h4 class="detail-content-title">System & Software Development</h4>
                         <p class="detail-content-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
@@ -170,9 +172,9 @@
               </div>
 
               <div class="col-12">
-                <div class="row gx-66px">
+                <div class="row gx-lg-66px">
                   <div class="col-xl-7">
-                    <div class="text-end">
+                    <div class="text-lg-end">
                       <div>
                         <h4 class="detail-content-title">Digital Transformation</h4>
                         <p class="detail-content-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
@@ -186,9 +188,9 @@
               </div>
 
               <div class="col-12">
-                <div class="row gx-66px">
+                <div class="row gx-lg-66px">
                   <div class="col-xl-7">
-                    <div class="text-end">
+                    <div class="text-lg-end">
                       <div>
                         <h4 class="detail-content-title">Programming Language</h4>
                         <div class="detail-content-grid">
@@ -241,7 +243,7 @@
       <!-- partner -->
       <div class="partner">
         <div class="content-container">
-          <div class="nav row gx-72px mb-72px" id="partnerTab" role="tablist">
+          <div class="nav row gx-lg-72px mb-4 mb-lg-72px" id="partnerTab" role="tablist">
             <div class="col c-pointer active" id="partner-tab-1" data-bs-toggle="tab" data-bs-target="#partner-1" type="button" role="tab">
               <img src="assets/images/img-partner-1-logo.jpg" class="partner-tab-logo" />
             </div>
@@ -265,7 +267,7 @@
           <div class="tab-content text-white" id="myTabContent">
             <div class="tab-pane fade show active" id="partner-1" role="tabpanel">
               <div>
-                <img src="assets/images/img-partner-1.jpg" class="w-100 mb-72px" />
+                <img src="assets/images/img-partner-1.jpg" class="w-100 mb-4 mb-lg-72px" />
                 <div class="row">
                   <div class="col-xl-6">
                     <h4 class="partner-title">
