--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
           </ul>
           <div class="d-block d-lg-none mt-auto">
             <div class="row">
-              <div class="col text-center">
+              <div class="col-3 text-center">
                 <a href="#">
                   <img src="assets/images/icon-dribbble.png" />
                 </a>
               </div>
-              <div class="col text-center">
+              <div class="col-3 text-center">
                 <a href="#">
                   <img src="assets/images/icon-instagram.png" />
                 </a>
               </div>
-              <div class="col text-center">
+              <div class="col-3 text-center">
                 <a href="#">
                   <img src="assets/images/icon-twitter.png" />
                 </a>
               </div>
-              <div class="col text-center">
+              <div class="col-3 text-center">
                 <a href="#">
                   <img src="assets/images/icon-facebook.png" />
                 </a>
