--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <div class="main-nav-left">
           <ul class="main-nav-menus">
             <li class="main-nav-menu main-nav-animated">
-              <a href="#" class="main-nav-link">Our World</a>
+              <a href="our-world.html" class="main-nav-link">Our World</a>
             </li>
             <li class="main-nav-menu main-nav-animated">
-              <a href="#" class="main-nav-link">Industry</a>
+              <a href="industry.html" class="main-nav-link">Industry</a>
             </li>
             <li class="main-nav-menu main-nav-animated">
-              <a href="#" class="main-nav-link">Expertise</a>
+              <a href="expertise.html" class="main-nav-link">Expertise</a>
             </li>
             <li class="main-nav-menu main-nav-animated">
-              <a href="#" class="main-nav-link">Career</a>
+              <a href="career.html" class="main-nav-link">Career</a>
             </li>
             <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
               <a href="#" class="main-nav-link">Contacts</a>
