--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
           </div>
         </div>
         <div class="main-nav-right">
-          <img src="assets/images/logo.svg" class="main-nav-logo" />
+          <a href="index.html">
+            <img src="assets/images/logo.svg" class="main-nav-logo" />
+          </a>
           <ul class="main-nav-icons">
             <li class="main-nav-icon main">
               <div class="c-pointer" onclick="toggleMainNav()">
@@ -276,9 +278,9 @@
                       Djurnee
                     </h4>
                     <p class="partner-detail">Indonesia’s Digital Administration Platform</p>
-                    <p class="fw-bold">user interface</p>
-                    <p class="fw-bold">user experience</p>
-                    <p class="fw-bold">web design</p>
+                    <p class="text-ed-white-1 fw-bold">user interface</p>
+                    <p class="text-ed-white-1 fw-bold">user experience</p>
+                    <p class="text-ed-white-1 fw-bold m-0">web design</p>
                   </div>
                   <div class="col-xl-6">
                     <p class="partner-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects, Enam Dua strives to produce the world class talents as much as possible.</p>
@@ -286,11 +288,21 @@
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="partner-2" role="tabpanel">partner-2</div>
-            <div class="tab-pane fade" id="partner-3" role="tabpanel">partner-3</div>
-            <div class="tab-pane fade" id="partner-4" role="tabpanel">partner-4</div>
-            <div class="tab-pane fade" id="partner-5" role="tabpanel">partner-5</div>
-            <div class="tab-pane fade" id="partner-5" role="tabpanel">partner-6</div>
+            <div class="tab-pane fade" id="partner-2" role="tabpanel">
+              <h3 class="text-ed-white-1">partner-2</h3>
+            </div>
+            <div class="tab-pane fade" id="partner-3" role="tabpanel">
+              <h3 class="text-ed-white-1">partner-3</h3>
+            </div>
+            <div class="tab-pane fade" id="partner-4" role="tabpanel">
+              <h3 class="text-ed-white-1">partner-4</h3>
+            </div>
+            <div class="tab-pane fade" id="partner-5" role="tabpanel">
+              <h3 class="text-ed-white-1">partner-5</h3>
+            </div>
+            <div class="tab-pane fade" id="partner-5" role="tabpanel">
+              <h3 class="text-ed-white-1">partner-6</h3>
+            </div>
           </div>
         </div>
       </div>
