--- a/our-world.html
+++ b/our-world.html
@@ -65,7 +65,9 @@
           </div>
         </div>
         <div class="main-nav-right">
-          <img src="assets/images/logo.svg" class="main-nav-logo" />
+          <a href="index.html">
+            <img src="assets/images/logo.svg" class="main-nav-logo" />
+          </a>
           <ul class="main-nav-icons">
             <li class="main-nav-icon main">
               <div class="c-pointer" onclick="toggleMainNav()">
