--- a/contact-us.html
+++ b/contact-us.html
@@ -99,44 +99,35 @@
         </div>
       </div>
 
-      <!-- expertise -->
-      <div class="expertise">
-        <div class="content-container">
-          <h1 class="expertise-title">Expertise</h1>
-          <div class="row g-5 gx-xxxl-80px gy-xxxl-200px">
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">System & Software Development</h2>
+      <!-- contacts -->
+      <div class="contacts">
+        <div class="content-container pe-lg-0">
+          <div class="row gx-5 gx-xxxl-110px">
+            <div class="col-xl-4 position-relative z-2">
+              <div class="contacts-content">
+                <h1 class="contacts-title">Contacts</h1>
+                <h2 class="contacts-subtitle">
+                  Let’s
+                  <br />
+                  meet up!
+                </h2>
+                <p class="contacts-text">Our house is at Cilandak, Jakarta Selatan. Come over, we have good coffee there!</p>
+                <p class="contacts-text fw-bold">
+                  Jl. Intan RSPP, C No. 5B
+                  <br />
+                  Cilandak, Jakarta Selatan 12430
+                </p>
+                <p class="contacts-text fw-bold mb-0">
+                  <span class="fw-normal">Or call us at,</span>
+                  <br />
+                  +62 859 2076 1260 / Dalbert
+                  <br />
+                  ask@62teknologi.com
+                </p>
+              </div>
             </div>
-            <div class="col-xl-6">
-              <p class="expertise-item-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
-            </div>
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">Digital Transformation</h2>
-            </div>
-            <div class="col-xl-6">
-              <p class="expertise-item-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
-            </div>
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">Programming Language</h2>
-            </div>
-            <div class="col-xl-6">
-              <ul class="expertise-list-items">
-                <li class="expertise-list-item">PHP</li>
-                <li class="expertise-list-item">Lavarel</li>
-                <li class="expertise-list-item">Vue</li>
-                <li class="expertise-list-item">React</li>
-                <li class="expertise-list-item">Postgres</li>
-                <li class="expertise-list-item">MariaDB</li>
-                <li class="expertise-list-item">MySql</li>
-                <li class="expertise-list-item">Redis</li>
-                <li class="expertise-list-item">Jenkins</li>
-                <li class="expertise-list-item">Cypress</li>
-                <li class="expertise-list-item">HTML5</li>
-                <li class="expertise-list-item">Javascript</li>
-                <li class="expertise-list-item">CSS 3</li>
-                <li class="expertise-list-item">iOS</li>
-                <li class="expertise-list-item">Android</li>
-              </ul>
+            <div class="col-xl-8 position-relative d-none d-lg-block z-1">
+              <img src="assets/images/img-contacts.jpg" class="contacts-img" />
             </div>
           </div>
         </div>
