--- a/downloads.html
+++ b/downloads.html
@@ -99,44 +99,62 @@
         </div>
       </div>
 
-      <!-- expertise -->
-      <div class="expertise">
+      <!-- downloads -->
+      <div class="downloads">
+        <div class="content-container pe-lg-0">
+          <div class="row gx-5 gx-xxxl-110px">
+            <div class="col-xl-5 position-relative z-2">
+              <div class="downloads-content">
+                <h1 class="downloads-title">
+                  Learn more
+                  <br />
+                  with enamdua
+                </h1>
+                <p class="downloads-text">We've compiled a list of our white papers and case studies for you below. Feel free to download any that interest you.</p>
+              </div>
+            </div>
+            <div class="col-xl-7 position-relative z-1 d-none d-lg-block">
+              <img src="assets/images/img-downloads.jpg" class="downloads-img" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- files -->
+      <div class="files">
         <div class="content-container">
-          <h1 class="expertise-title">Expertise</h1>
-          <div class="row g-5 gx-xxxl-80px gy-xxxl-200px">
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">System & Software Development</h2>
+          <div class="row gx-0 gx-xxxl-5 gy-4 gy-xxxl-0">
+            <div class="col-xl-3">
+              <a href="assets/files/example.docs" target="_blank">
+                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                  <h3 class="file-title">Careers</h3>
+                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                </div>
+              </a>
             </div>
-            <div class="col-xl-6">
-              <p class="expertise-item-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
+            <div class="col-xl-3">
+              <a href="assets/files/example.docs" target="_blank">
+                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                  <h3 class="file-title">Careers</h3>
+                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                </div>
+              </a>
             </div>
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">Digital Transformation</h2>
+            <div class="col-xl-3">
+              <a href="assets/files/example.docs" target="_blank">
+                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                  <h3 class="file-title">Careers</h3>
+                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                </div>
+              </a>
             </div>
-            <div class="col-xl-6">
-              <p class="expertise-item-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
-            </div>
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">Programming Language</h2>
-            </div>
-            <div class="col-xl-6">
-              <ul class="expertise-list-items">
-                <li class="expertise-list-item">PHP</li>
-                <li class="expertise-list-item">Lavarel</li>
-                <li class="expertise-list-item">Vue</li>
-                <li class="expertise-list-item">React</li>
-                <li class="expertise-list-item">Postgres</li>
-                <li class="expertise-list-item">MariaDB</li>
-                <li class="expertise-list-item">MySql</li>
-                <li class="expertise-list-item">Redis</li>
-                <li class="expertise-list-item">Jenkins</li>
-                <li class="expertise-list-item">Cypress</li>
-                <li class="expertise-list-item">HTML5</li>
-                <li class="expertise-list-item">Javascript</li>
-                <li class="expertise-list-item">CSS 3</li>
-                <li class="expertise-list-item">iOS</li>
-                <li class="expertise-list-item">Android</li>
-              </ul>
+            <div class="col-xl-3">
+              <a href="assets/files/example.docs" target="_blank">
+                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                  <h3 class="file-title">Careers</h3>
+                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                </div>
+              </a>
             </div>
           </div>
         </div>
