--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               <a href="career.html" class="main-nav-link">Career</a>
             </li>
             <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
-              <a href="#" class="main-nav-link">Contacts</a>
+              <a href="contact-us.html" class="main-nav-link">Contact Us</a>
             </li>
             <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
-              <a href="#" class="main-nav-link">Downloads</a>
+              <a href="downloads.html" class="main-nav-link">Downloads</a>
             </li>
           </ul>
           <div class="d-block d-lg-none mt-auto">
@@ -150,73 +150,42 @@
       <!-- detail -->
       <div class="detail">
         <div class="content-container">
-          <div class="row gx-lg-66px">
-            <div class="col-xl-5 offset-xl-7">
-              <h2 class="detail-title">Enam dua Expertise</h2>
-            </div>
-          </div>
           <div class="detail-content">
-            <div class="row gy-5">
-              <div class="col-12">
-                <div class="row gx-lg-66px">
-                  <div class="col-xl-7">
-                    <div class="text-lg-end">
-                      <div>
-                        <h4 class="detail-content-title">System & Software Development</h4>
-                        <p class="detail-content-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-5">
-                    <div class="detail-content-box"></div>
-                  </div>
-                </div>
+            <div class="row">
+              <div class="col-xl-5">
+                <h2 class="detail-title">Enam dua Expertise</h2>
               </div>
+              <div class="col-xl-7 mt-4">
+                <div class="row gy-5">
+                  <div class="col-12">
+                    <h4 class="detail-content-title">System & Software Development</h4>
+                    <p class="detail-content-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
+                  </div>
 
-              <div class="col-12">
-                <div class="row gx-lg-66px">
-                  <div class="col-xl-7">
-                    <div class="text-lg-end">
-                      <div>
-                        <h4 class="detail-content-title">Digital Transformation</h4>
-                        <p class="detail-content-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
-                      </div>
-                    </div>
+                  <div class="col-12">
+                    <h4 class="detail-content-title">Digital Transformation</h4>
+                    <p class="detail-content-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
                   </div>
-                  <div class="col-xl-5">
-                    <div class="detail-content-box"></div>
-                  </div>
-                </div>
-              </div>
 
-              <div class="col-12">
-                <div class="row gx-lg-66px">
-                  <div class="col-xl-7">
-                    <div class="text-lg-end">
-                      <div>
-                        <h4 class="detail-content-title">Programming Language</h4>
-                        <div class="detail-content-grid">
-                          <p class="detail-content-text">CSS 3</p>
-                          <p class="detail-content-text">Cypress</p>
-                          <p class="detail-content-text">MySql</p>
-                          <p class="detail-content-text">React</p>
-                          <p class="detail-content-text">PHP</p>
-                          <p class="detail-content-text">iOS</p>
-                          <p class="detail-content-text">HTML5</p>
-                          <p class="detail-content-text">Redis</p>
-                          <p class="detail-content-text">Postgres</p>
-                          <p class="detail-content-text">Lavarel</p>
-                          <p class="detail-content-text">Android</p>
-                          <p class="detail-content-text">Javascript</p>
-                          <p class="detail-content-text">Jenkins</p>
-                          <p class="detail-content-text">MariaDB</p>
-                          <p class="detail-content-text">Vue</p>
-                        </div>
-                      </div>
+                  <div class="col-12">
+                    <h4 class="detail-content-title">Programming Language</h4>
+                    <div class="detail-content-grid">
+                      <p class="detail-content-text">PHP</p>
+                      <p class="detail-content-text">React</p>
+                      <p class="detail-content-text">MySql</p>
+                      <p class="detail-content-text">Cypress</p>
+                      <p class="detail-content-text">CSS 3</p>
+                      <p class="detail-content-text">Lavarel</p>
+                      <p class="detail-content-text">Postgres</p>
+                      <p class="detail-content-text">Redis</p>
+                      <p class="detail-content-text">HTML5</p>
+                      <p class="detail-content-text">iOS</p>
+                      <p class="detail-content-text">Vue</p>
+                      <p class="detail-content-text">MariaDB</p>
+                      <p class="detail-content-text">Jenkins</p>
+                      <p class="detail-content-text">Javascript</p>
+                      <p class="detail-content-text">Android</p>
                     </div>
-                  </div>
-                  <div class="col-xl-5">
-                    <div class="detail-content-box"></div>
                   </div>
                 </div>
               </div>
@@ -245,46 +214,55 @@
       <!-- partner -->
       <div class="partner">
         <div class="content-container">
-          <div class="nav row gx-lg-72px mb-4 mb-lg-72px" id="partnerTab" role="tablist">
-            <div class="col c-pointer active" id="partner-tab-1" data-bs-toggle="tab" data-bs-target="#partner-1" type="button" role="tab">
-              <img src="assets/images/img-partner-1-logo.jpg" class="partner-tab-logo" />
+          <div class="partner-tab-top">
+            <div class="nav partner-tab-items" id="partnerTab" role="tablist">
+              <div class="partner-tab-item active" id="partner-tab-1" data-bs-toggle="tab" data-bs-target="#partner-1" data-bs-target="#partner-11" type="button" role="tab">
+                <img src="assets/images/img-partner-1-logo.jpg" class="partner-tab-logo" />
+              </div>
+              <div class="partner-tab-item" id="partner-tab-2" data-bs-toggle="tab" data-bs-target="#partner-2" data-bs-target="#partner-12" type="button" role="tab">
+                <img src="assets/images/img-partner-2-logo.jpg" class="partner-tab-logo" />
+              </div>
+              <div class="partner-tab-item" id="partner-tab-3" data-bs-toggle="tab" data-bs-target="#partner-3" data-bs-target="#partner-13" type="button" role="tab">
+                <img src="assets/images/img-partner-3-logo.jpg" class="partner-tab-logo" />
+              </div>
+              <div class="partner-tab-item" id="partner-tab-4" data-bs-toggle="tab" data-bs-target="#partner-4" data-bs-target="#partner-14" type="button" role="tab">
+                <img src="assets/images/img-partner-4-logo.jpg" class="partner-tab-logo" />
+              </div>
             </div>
-            <div class="col c-pointer" id="partner-tab-2" data-bs-toggle="tab" data-bs-target="#partner-2" type="button" role="tab">
-              <img src="assets/images/img-partner-2-logo.jpg" class="partner-tab-logo" />
-            </div>
-            <div class="col c-pointer" id="partner-tab-3" data-bs-toggle="tab" data-bs-target="#partner-3" type="button" role="tab">
-              <img src="assets/images/img-partner-3-logo.jpg" class="partner-tab-logo" />
-            </div>
-            <div class="col c-pointer" id="partner-tab-4" data-bs-toggle="tab" data-bs-target="#partner-4" type="button" role="tab">
-              <img src="assets/images/img-partner-4-logo.jpg" class="partner-tab-logo" />
-            </div>
-            <div class="col c-pointer" id="partner-tab-5" data-bs-toggle="tab" data-bs-target="#partner-5" type="button" role="tab">
-              <img src="assets/images/img-partner-5-logo.jpg" class="partner-tab-logo" />
-            </div>
-            <div class="col c-pointer" id="partner-tab-5" data-bs-toggle="tab" data-bs-target="#partner-5" type="button" role="tab">
-              <img src="assets/images/img-partner-6-logo.jpg" class="partner-tab-logo" />
+            <div class="partner-tab-cover">
+              <div class="tab-content h-100" id="myTabContent">
+                <div class="tab-pane h-100 fade show active" id="partner-11" role="tabpanel">
+                  <img src="assets/images/img-partner-1.jpg" class="partner-tab-cover-img" />
+                </div>
+                <div class="tab-pane h-100 fade" id="partner-12" role="tabpanel">
+                  <h3 class="text-ed-white-1">partner-2</h3>
+                </div>
+                <div class="tab-pane h-100 fade" id="partner-13" role="tabpanel">
+                  <h3 class="text-ed-white-1">partner-3</h3>
+                </div>
+                <div class="tab-pane h-100 fade" id="partner-14" role="tabpanel">
+                  <h3 class="text-ed-white-1">partner-4</h3>
+                </div>
+              </div>
             </div>
           </div>
 
           <div class="tab-content text-white" id="myTabContent">
             <div class="tab-pane fade show active" id="partner-1" role="tabpanel">
-              <div>
-                <img src="assets/images/img-partner-1.jpg" class="w-100 mb-4 mb-lg-72px" />
-                <div class="row">
-                  <div class="col-xl-6">
-                    <h4 class="partner-title">
-                      Kasbon by
-                      <br />
-                      Djurnee
-                    </h4>
-                    <p class="partner-detail">Indonesia’s Digital Administration Platform</p>
-                    <p class="text-ed-white-1 fw-bold">user interface</p>
-                    <p class="text-ed-white-1 fw-bold">user experience</p>
-                    <p class="text-ed-white-1 fw-bold m-0">web design</p>
-                  </div>
-                  <div class="col-xl-6">
-                    <p class="partner-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects, Enam Dua strives to produce the world class talents as much as possible.</p>
-                  </div>
+              <div class="row">
+                <div class="col-xl-6">
+                  <h4 class="partner-title">
+                    Kasbon by
+                    <br />
+                    Djurnee
+                  </h4>
+                  <p class="partner-detail">Indonesia’s Digital Administration Platform</p>
+                  <p class="text-ed-white-1 fw-bold">user interface</p>
+                  <p class="text-ed-white-1 fw-bold">user experience</p>
+                  <p class="text-ed-white-1 fw-bold m-0">web design</p>
+                </div>
+                <div class="col-xl-6">
+                  <p class="partner-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects, Enam Dua strives to produce the world class talents as much as possible.</p>
                 </div>
               </div>
             </div>
@@ -296,12 +274,6 @@
             </div>
             <div class="tab-pane fade" id="partner-4" role="tabpanel">
               <h3 class="text-ed-white-1">partner-4</h3>
-            </div>
-            <div class="tab-pane fade" id="partner-5" role="tabpanel">
-              <h3 class="text-ed-white-1">partner-5</h3>
-            </div>
-            <div class="tab-pane fade" id="partner-5" role="tabpanel">
-              <h3 class="text-ed-white-1">partner-6</h3>
             </div>
           </div>
         </div>
@@ -357,13 +329,6 @@
             <a href="#" class="footer-other-menu">Contact us</a>
             <a href="#" class="footer-other-menu">Our offices</a>
             <a href="#" class="footer-other-menu">Get in touch</a>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Legal</a>
-            <a href="#" class="footer-other-menu">Privacy policy</a>
-            <a href="#" class="footer-other-menu">Terms & conditions</a>
-            <a href="#" class="footer-other-menu">Cookies</a>
           </div>
 
           <div class="footer-other-menus">
