--- a/industry.html
+++ b/industry.html
@@ -34,10 +34,10 @@
               <a href="career.html" class="main-nav-link">Career</a>
             </li>
             <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
-              <a href="#" class="main-nav-link">Contacts</a>
+              <a href="contact-us.html" class="main-nav-link">Contact Us</a>
             </li>
             <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
-              <a href="#" class="main-nav-link">Downloads</a>
+              <a href="downloads.html" class="main-nav-link">Downloads</a>
             </li>
           </ul>
           <div class="d-block d-lg-none mt-auto">
@@ -509,13 +509,6 @@
             <a href="#" class="footer-other-menu">Contact us</a>
             <a href="#" class="footer-other-menu">Our offices</a>
             <a href="#" class="footer-other-menu">Get in touch</a>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Legal</a>
-            <a href="#" class="footer-other-menu">Privacy policy</a>
-            <a href="#" class="footer-other-menu">Terms & conditions</a>
-            <a href="#" class="footer-other-menu">Cookies</a>
           </div>
 
           <div class="footer-other-menus">
