--- a/our-world.html
+++ b/our-world.html
@@ -33,10 +33,10 @@
               <a href="career.html" class="main-nav-link">Career</a>
             </li>
             <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
-              <a href="#" class="main-nav-link">Contacts</a>
+              <a href="contact-us.html" class="main-nav-link">Contact Us</a>
             </li>
             <li class="main-nav-menu main-nav-menu-bottom main-nav-animated">
-              <a href="#" class="main-nav-link">Downloads</a>
+              <a href="downloads.html" class="main-nav-link">Downloads</a>
             </li>
           </ul>
           <div class="d-block d-lg-none mt-auto">
@@ -103,7 +103,10 @@
       <div class="hero our-world">
         <div class="content-container">
           <h1 class="hero-title">E.nam\Du.a</h1>
-          <h2 class="hero-subtitle">Indonesian language; spelling: A-num\Due-wa</h2>
+          <h2 class="hero-subtitle">
+            <span class="fw-normal">Indonesian language; spelling:</span>
+            A-num\Due-wa
+          </h2>
           <p class="hero-text">Origin: Enam Dua means ‘six-two’ or sixty two. It is Indonesia’s international country code (+62), that was also used as a meme word for “Indonesia” by “Indonesian internet citizen” (netizen) in social media.</p>
         </div>
       </div>
@@ -125,7 +128,7 @@
             <div class="col-xl-7 pt-5">
               <p class="our-world-text">Since the first touch of internet, Indonesia has become one of the most important components in supporting the global digital progression. In more than two decades, the Indonesian people have been exposed and infused with the idea of internet technology as an integral part of living. Demographically, Indonesia is the number 4 most populated country in the world; Indonesia has always been one of the world’s major markets, especially in this global digital era.</p>
               <p class="our-world-text">However, Indonesia’s digital evolusion inspires them to step up higher. As the biggest contributor to the internet economy's growth in Southeast Asia, Indonesia’s tech sector is booming. Computer science and software engineering has become one of the most popular educational subject in Indonesia; formally and informally. It is certain that science and technology learning will grow exponentially with the nation’s future set to be defined by science, technology, engineering and mathematics or STEM learning.</p>
-              <p class="our-world-text">
+              <p class="our-world-text m-0">
                 Indonesia has the market, and the talent as well. It’ll be interesting to see how these Enam Dua Citizen develop themselves
                 <br />
                 <span class="text-ed-red-1 fw-bold fs-1 lh-base">to dominate the global digital world.</span>
@@ -139,16 +142,18 @@
       <div class="inside">
         <div class="content-container">
           <div class="row">
-            <div class="col-xl-12 mb-4 mb-lg-110px">
+            <div class="col-xl-12 mb-4 mb-lg-80px">
               <h2 class="inside-title outline m-0">Indonesia is a big pool</h2>
               <h2 class="inside-title outline m-0 text-end">of digital talents.</h2>
             </div>
             <div class="col-xl-10 offset-xl-1">
-              <div class="row gx-xl-72px">
+              <div class="row gx-xl-110px">
                 <div class="col-xl-6">
-                  <h4 class="inside-title text-end">What Else Is In The House?</h4>
-                  <p class="inside-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects.</p>
-                  <p class="inside-text fs-1 fw-bold lh-base">We strives to produce the world class talents as much as possible.</p>
+                  <div class="mt-lg-80px">
+                    <h4 class="inside-title text-end">What Else Is In The House?</h4>
+                    <p class="inside-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects.</p>
+                    <p class="inside-text inside-text-big pe-lg-66px">We strives to produce the world class talents as much as possible.</p>
+                  </div>
                 </div>
                 <div class="col-xl-6">
                   <img src="assets/images/img-inside-1.jpg" class="w-100 mb-4 mb-lg-0" />
@@ -352,13 +357,6 @@
             <a href="#" class="footer-other-menu">Contact us</a>
             <a href="#" class="footer-other-menu">Our offices</a>
             <a href="#" class="footer-other-menu">Get in touch</a>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Legal</a>
-            <a href="#" class="footer-other-menu">Privacy policy</a>
-            <a href="#" class="footer-other-menu">Terms & conditions</a>
-            <a href="#" class="footer-other-menu">Cookies</a>
           </div>
 
           <div class="footer-other-menus">
